--- a/student_feedback.ipynb
+++ b/student_feedback.ipynb
@@ -4604,6 +4604,66 @@
     "\n",
     "6. Expand Data Collection: In future surveys, consider including open-ended questions to capture qualitative feedback, enabling sentiment analysis and deeper insights."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['High' 'Low']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Assuming you used something like this:\n",
+    "le = LabelEncoder()\n",
+    "le.fit(df['satisfaction_label'])\n",
+    "print(le.classes_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: [1]\n",
+      "Prediction probabilities: [[0. 1.]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pinchez\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\pinchez\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\pinchez\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "test_input = np.array([[10]*8])  # All features set to 10\n",
+    "test_scaled = scaler.transform(test_input)\n",
+    "pred = model.predict(test_scaled)\n",
+    "proba = model.predict_proba(test_scaled)\n",
+    "\n",
+    "print(\"Predicted class:\", pred)\n",
+    "print(\"Prediction probabilities:\", proba)"
+   ]
   }
  ],
  "metadata": {
